# IDS

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  README_short.md  docker-compose.yml  main.c  prometheus.yml
include/: anomaly.h  common.h  config.h  http_server.h  net_reader.h  parser.h  rate.h  rule_engine.h
src/: anomaly.c  common.c  config.c  http_server.c  net_reader.c  parser.c  rate.c  rule_engine.c
